prevent trial banner in the footer overlapping sidebar

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -1092,6 +1092,7 @@ li.breadcrumb-toggle-wrapper {
   @include padding-right(var(--xl));
   @include padding-left(var(--m));
   width: $detailsWidth + 38;
+  z-index: 1;
 
   &.fixed {
     position: fixed;
@@ -1100,6 +1101,8 @@ li.breadcrumb-toggle-wrapper {
   }
 
   .details {
+    margin-bottom: 11.5em;
+
     .meta {
       border-radius: var(--large-border-radius);
 
@@ -1263,6 +1266,10 @@ li.breadcrumb-toggle-wrapper {
   #details {
     padding: 0 !important;
     margin-top: var(--m);
+
+    .details {
+      margin-bottom: auto;
+    }
   }
 }
 
